--- a/mainBib.bib
+++ b/mainBib.bib
@@ -1,3 +1,10 @@
+@BOOK{probabilisticRobotics,
+  author    = {Sebastian Thrun and Wolfram Burgard and Dieter Fox},
+  title     = {Probabilistic Robotics},
+  year      = {2005},
+  publisher = {The MIT Press},
+}
+
 @inproceedings{robot_localization_paper,
   author    = {T. Moore and D. Stouch},
   title     = {A Generalized Extended Kalman Filter Implementation for the Robot Operating System},
@@ -13,7 +20,7 @@
    journal = "code, circuits, & construction",
    type = "Blog",
    year = 2017,
-   howpublished = {http://web.archive.org/web/20160915053759/http://www.tigoe.com:80/pcomp/code/circuits/motors/controlling-dc-motors/},
+   url = {http://web.archive.org/web/20160915053759/http://www.tigoe.com:80/pcomp/code/circuits/motors/controlling-dc-motors/},
 }
 
 @MISC{encoderBlog,
@@ -22,15 +29,42 @@
    journal = "Makeatronics",
    type = "Blog",
    year = 2013,
-   howpublished = {https://web.archive.org/web/20140515005614/http://makeatronics.blogspot.com/2013/02/efficiently-reading-quadrature-with.html},
+   url = {https://web.archive.org/web/20140515005614/http://makeatronics.blogspot.com/2013/02/efficiently-reading-quadrature-with.html},
+}
+
+@MISC{gammonInterrupts,
+   author = "Nick Gammon",
+   title = "Interrupts",
+   journal = "Gammon Forum",
+   type = "Online",
+   year = 2012,
+   url = {https://web.archive.org/web/20170218142257/gammon.com.au/interrupts},
+}
+
+@MISC{newPing,
+   author = "Tim Eckel",
+   title = "NewPing Library for Arduino",
+   journal = "arduino.cc",
+   type = "Library",
+   year = 2016,
+   url = {http://playground.arduino.cc/Code/NewPing},
+}
+
+@manual{pingDocumentation,
+author = {Parallax Inc.},
+title = {PING))\textsuperscript{TM} Ultrasonic Distance Sensor (\#28015) Documentation},
+year = 2009,
+language = {English},
+pagetotal = {12},
 }
 
 @manual{sabertoothUserGuide,
 author = {Dimension Engineering},
 title = {Sabertooth 2x12 User's Guide},
-date = {April 2012},
+year = 2012,
 language = {English},
 pagetotal = {21},
+url = {http://web.archive.org/web/20160324141917/http://www.robotshop.com/media/files/pdf/user-guide-sabertooth-2-12.pdf}
 }
 
 @MISC{usbForum,
@@ -38,7 +72,7 @@ pagetotal = {21},
    journal = "USB Implementers Forum, Inc.",
    type = "Online",
    year = 2017,
-   howpublished = {http://web.archive.org/web/20170225172623/http://www.usb.org/developers/usbfaq\#cab1},
+   url = {http://web.archive.org/web/20170225172623/http://www.usb.org/developers/usbfaq\#cab1},
 }
 
 @MISC{fig_lynxmotion_rover,
@@ -56,6 +90,14 @@ pagetotal = {21},
 	url = {http://web.archive.org/web/20170321022401/https://www.adafruit.com/product/50},
 }
 
+@MISC{fig_optical_encoders,
+	author = "Machine Design",
+	title = "quadrature-signals-encoders-basics",
+	year = "2004",
+	note = "[Online: accessed April 24, 2017]",
+	url = {http://www.machinedesign.com/sites/machinedesign.com/files/uploads/2013/04/quadrature-signals-encoders-basics.png},
+}
+
 @MISC{fig_ping,
 	author = "Parallax",
 	title = "Parallax PING Ultrasonic Sensor",
@@ -64,9 +106,17 @@ pagetotal = {21},
 	url = {http://web.archive.org/web/20161208012823/http://www.robotshop.com/en/parallax-ping-ultrasonic-sensor.html},
 }
 
+@MISC{fig_quad_channels,
+	author = "Nich Fugal",
+   	title = "quadrature",
+   	journal = "Makeatronics",
+	note = "[Online: accessed April 24, 2017]",
+   	url = "http://3.bp.blogspot.com/-9WVs1ImbheQ/U9w53Hm10FI/AAAAAAAAOv4/H313k8qFmnw/s1600/quadrature_half_res.png",
+}
+
 @MISC{fig_ros_control,
 	author = "Dave Coleman",
-	title = "ros_control",
+	title = {ros\_control},
 	year = "2013",
 	note = "[Online: accessed April 10, 2017]",
 	url = {https://web.archive.org/web/20161019152656/http://wiki.ros.org/ros_control},
@@ -85,6 +135,6 @@ pagetotal = {21},
         organization = "Youtube",
         author = "drbrono",
         url = {https://youtu.be/QCNoVRgETRc},
-    }
+}
 
 
