--- a/main.tex
+++ b/main.tex
@@ -31,11 +31,20 @@
 \usepackage{graphicx} % package to manage images
 \graphicspath{ {figures/} }
 \usepackage{wrapfig}
-\usepackage{listings}
+\usepackage{listings} %code extracts
+\usepackage{xcolor} %custom colours
+\usepackage{mdframed} %nice frames
+
+\definecolor{light-gray}{gray}{0.95} %the shade of grey that stack exchange uses
 
 \usepackage[backend=biber]{biblatex}
 \addbibresource{mainBib.bib}
 
+\setcounter{biburlnumpenalty}{100}
+\setcounter{biburlucpenalty}{100}
+\setcounter{biburllcpenalty}{100} 
+
+\usepackage{url}
 %% These have been added at the request of the MIT Libraries, because
 %% some PDF conversions mess up the ligatures.  -LB, 1/22/2014
 \usepackage{cmap}
@@ -58,9 +67,9 @@
 \include{introduction}
 \include{Theory}
 \include{Hardware}
+\include{Arduino}
 \include{ROS}
-\include{Navigation}
-\include{Field_Test}
+\include{FutureSteps}
 %\appendix
 %\include{appa}
 %\include{appb}
