wrote notes in ROS section

--- a/FutureSteps.tex
+++ b/FutureSteps.tex
@@ -22,5 +22,7 @@ how this project is limited
 
 introduction of a camera, but attaching a webcam directly to the chassis of the robot would be troublesome to work with, sense there would be no shock absorption and the video frames would wobble.
 
+Integration of GPS data into position estimate causes discrete jumps, may make it unsuitable for use in the navigation stack. Solution: ditch GPS, use range data from ultrasonic sensor with amcl
+
 
 \section{Conclusion}
