--- a/Arduino.tex
+++ b/Arduino.tex
@@ -1,37 +1,37 @@
 \chapter{Arduino}
 
 %BRIDGE FROM PREVIOUS SECTION
-The Arduino Uno in this project acts as a bridge between hardware and software, allowing the navigation stack on the laptop to read sensor data from the rover, and control the speed of its wheels.
+The Arduino Uno in this project acts as a bridge between hardware and software, allowing the the laptop to read sensor data from the rover, and control the speed of its wheels.
 
 \section{Background}
-Arduino development boards are printed circuit boards (PCBs) with an on-board microcontroller, timing crystal, USB port, I/O pins and more. The board used in this project, an Arduino Uno, uses the ATmega328P microcontroller with a 16 MHz quartz timing crystal and has 14 digital I/O pins. It also has 6 analog I/O pins, but we won't make use of them in this project. 
+Arduino development boards are printed circuit boards capable of running small embedded programs. They contain an on-board microcontroller, timing crystal, USB port, I/O pins and more. The specific board used in this project, an Arduino Uno, uses the ATmega328P microcontroller with a 16 MHz quartz timing crystal and 14 digital I/O pins. It also has 6 analog-to-digital converter I/O pins, but we won't make use of them in this project. 
 
-Digital I/O pins can be configured to either read signals as input or generate them as output. Digital pins read input signals at specific times as binary values, that is the connected signal's voltage is read as either LOW or HIGH. They are also capable of generating binary output voltage, HIGH and LOW signals.
+Digital I/O pins can be configured to either read signals as input or generate them as output. Digital pins read input signals at specific times as binary values, i.e. the connected signal's voltage is read as either on or off compared to a certain threshold voltage. Following the standard Arduino literature, we will refer to these signals as either HIGH or LOW. When digital pins are configured to generate HIGH or LOW signals, they produce a relative output voltage above or below the threshold voltage.
 
 \subsection{Servo Control Pulses} \label{sectionRCPulses}
-An important use-case which pops up often when using the Arduino is that of interfacing with RC electronics. In this project's design, both the Sabertooth motor driver and the standard servo require their signal inputs to use the standard R/C transmission protocol. In fact, the standard servo contains among other components an internal motor driver, and so 
+An important use-case which pops up often when using the Arduino is that of interfacing with RC electronics. In this project's design, both the Sabertooth motor driver and the standard servo require their signal inputs to use the standard R/C transmission protocol.
 
-This protocol involves sending brief pulses of a HIGH signal, between one and two milliseconds. There is a fixed delay between pulses, commonly about 20 ms of LOW signal. The width of the HIGH pulse communicates to a servo the desired position. Its internal components then drive its DC motors until the servo is rotated to the commanded position. In the case of the Sabertooth motor driver, the position is interpreted as a speed to drive the motors at.
+This protocol involves sending brief HIGH pulses of variable width, between one and two milliseconds. There is a fixed delay between pulses, commonly about 20 ms of LOW signal. The width of the HIGH pulse communicates to a servo the desired position. Its internal components then drive its DC motors until the servo is rotated to the commanded position. In the case of the Sabertooth motor driver, the position is interpreted as a speed to drive the motors at.
 
 \section{Arduino Uno Connections}
 Refer back to Figure \ref{figRoverDesign} for a visual representation of how the Arduino Uno is connected to the other rover components.
 
 \subsection{Hardware Interrupt Pins} \label{sectionHIP}
-As one can see in Figure \ref{figRoverDesign}, only two optical quadrature encoders are used, with one placed on the front motor for both the left and right side of the rover. This is due to a hardware limitation of the Arduino Uno. The ATmega328P microcontroller has only two interrupt pins, which are mapped to digital pins 2 and 3 on the Uno. These pins can trigger unique Interrupt Service Routines (ISRs) whenever the input signals change from LOW to HIGH voltage, or vice versa.
+As one can see in Figure \ref{figRoverDesign}, only two optical quadrature encoders are used, placed on the front motors on the left and right side of the rover. This is due to a hardware limitation of the Arduino Uno. The ATmega328P microcontroller has only two interrupt pins, which are mapped to digital pins 2 and 3 on the Uno. These pins can trigger unique Interrupt Service Routines (ISRs) whenever the input signals change from LOW to HIGH voltage, or vice versa.
 
-While it is possible to create interrupts which react to a change in a pin's voltage for any digital pin, these will be slower than ISRs from hardware interrupts. A hardware interrupt is necessary to keep up with the fast rate of pin voltage changes that occur in the output of quadrature encoders.
+While it is possible to react to a change in any digital pin's voltage, it would be significantly slower than a hardware interrupt. An ISR is necessary to keep up with the fast rate of pin voltage changes that occur in the output of quadrature encoders.
 
-If a different Arduino board such as the Mega were used, there would be sufficient hardware interrupt pins for all four encoders. Using a board with plentiful interrupts, one could even attach both channel outputs of the encoders to interrupt pins, rather than only one. This would double the encoders' resolution \cite{encoderBlog}.
+If a different Arduino board such as the Mega were used, there would be sufficient hardware interrupt pins for all four encoders. Using a board with plentiful interrupts, one could even attach both channel outputs of the encoders to interrupt pins, rather than only one. This would double the encoders' resolution. See section \ref{sectionQuadEncoders} for more detail.
 
 \subsection{Digital Pin Connections}
-Each motor encoder has two output channels, channel A and channel B. Both encoders attach one of their output channels, channel A, to a hardware interrupt pin. In section \ref{sectionQuadEncoders} we will see why this configuration was chosen. The right motor's encoder connects channel A to pin 2, and channel B to pin 4. The left motor's encoder connects its channel A output to pin 3, and its channel B output to pin 7. 
+Each motor encoder has two output channels, A and B. Both encoders attach one of their output channels, channel A, to a hardware interrupt pin. In section \ref{sectionQuadEncoders} we will see why this configuration was chosen. The right motor's encoder connects channel A to pin 2, and channel B to pin 4. The left motor's encoder connects its channel A output to pin 3, and its channel B output to pin 7.
 
 The S1 and S2 signal input terminals on the Sabertooth motor driver are connected to digital pins 5 and 6. The control signal for the hobby servo is connected to digital pin 9. The signal pin on the ultrasonic sensor is connected to digital pin 11. The Arduino's ground pin is connected to the ground of the motor driver's BEC, to ensure a common ground plane.
 
 Most digital pin numbers used are arbitrary, and connections may be permuted without issue. The exceptions are pins 0-3, which must not be modified. Pins 0 and 1 must be left unattached for serial data transfer to work properly over USB. And pins 2 and 3 are hardware interrupt pins which must be used to handle the quadrature encoders' output.
 
 \section{Motor Driver's Configuration}
-The Sabertooth motor driver has two signal input terminals, S1 and S2, which allow the Arduino to issue instructions specifying how to drive the motors. The protocols used to communicate with the motor driver over these signal inputs are specified by DIP switches on-board the driver. There are six of these DIP switches, and they can be flipped either up or down.
+The Sabertooth motor driver has two signal input terminals, S1 and S2, which allow the Arduino to issue instructions specifying how to drive the motors. The protocols used to communicate with the motor driver over these signal inputs are specified by six DIP switches on-board the driver. These DIP switches are manually flipped either up or down.
 
 Setting switch 1 down and switch 2 up places the driver into R/C input mode, which configures S1 and S2 to expect servo control pulses, à la R/C controllers. This protocol was briefly explained in section \ref{sectionRCPulses}. \cite{sabertoothUserGuide}
 
@@ -44,9 +44,37 @@ Switch 5 is flipped up to ensure a linear rather than exponential response of th
 \section{Arduino Sketch}
 A sketch is Arduino-speak for an embedded program written for an Arduino board. There is an Arduino IDE which supports development of sketches in C or C++, and allows one to take advantage of a software library for common I/O interactions. After the code is written in this IDE, it is uploaded to the board over a USB serial connection. The board will then continuously execute the code found in the sketch's main loop as long as the board is powered. This embedded software interacts with the various sensors and other electronics on a low level, through reading from and writing to the Arduino's digital I/O pins.
 
-Part of the standard Arduino library is the Servo library. This library allows one to configure a digital pin to output RC control pulses, as explained in section \ref{sectionRCPulses}. The sketch used in this project uses this library to specify the speed of each set of wheels driven by the Sabertooth motor driver, and to control the position of the standard servo aiming the ultrasonic range sensor.
+One of the standard Arduino libraries is the Servo library. This library allows one to configure a digital pin to output RC control pulses, as explained in section \ref{sectionRCPulses}. The sketch used in this project uses this library to specify the speed of each set of wheels driven by the Sabertooth motor driver, and to control the position of the standard servo aiming the ultrasonic range sensor. The motor driver is sent pulses every 20 ms, with HIGH pulses from 1 ms to 2 ms. The standard servo is also sent pulses every 20 ms, with HIGH pulses from 0.75 ms to 2.25 ms as its datasheet specifies.
 
-%\lstinputlisting[language=C++]{../AutoRover/Arduino/rover_sketch/rover_sketch.ino}
+\subsection{Ultrasonic Sensor}
+The PING))) ultrasonic distance sensor works by emitting a short burst of 40 kHz sound waves and timing the delay before an echo response. The Arduino triggers a ping by generating a brief 5 \(\mu\)s (microsecond) pulse on the sensor's bi-directional signal pin. The sensor then generates a HIGH output pulse, which continues until either the echo is received or the maximum amount of time, 18.5 ms, has passed. This time may then be multiplied by the speed of sound in air to calculate an estimated distance of the first object in front of the sensor. \cite{pingDocumentation}
+
+The sketch uses the NewPing library to handle this protocol \cite{newPing}. This library provides a convenient method, ping() which returns the echo time in \(\mu\)s. The sketch avoids costly floating point computations by sending this echo time over serial rather than a distance.
+
+\subsection{Servo}
+The ultrasonic sensor can only detect objects which are roughly straight in front of it. Thus for the rover to have a better approximation of its surroundings, the sensor needs to be panned back and forth. This is what the standard servo it is attached to allows. The sketch makes use of the Servo library to control the servo with R/C pulses. An angular degree from 0 to 180 is written to a Servo object, and the Servo library handles generating the output signal corresponding to that position on the appropriate digital pin.
+
+The sketch sweeps the servo back and forth one degree at a time, and at each step an ultrasonic ping is emitted. The echo time for that ping is measured, and the current values of all sensors are published. This means that the delay between servo steps defines the publishing frequency of sensor data on the Arduino. This delay is currently set to 100 ms, which corresponds to a 10 Hz publishing frequency. The frequency could be increased for future work, but a bare minimum delay of 30 ms is necessary to give the servo time to finish moving, and the PING))) sensor time to recover and prepare for the next ping.
+
+The basic idea is shown in the following code for an arbitrary servo step size:
+\begin{mdframed}[backgroundcolor=light-gray, roundcorner=10pt,leftmargin=1, rightmargin=1, innerleftmargin=15, innertopmargin=15,innerbottommargin=15, outerlinewidth=1, linecolor=light-gray]
+	\begin{lstlisting}[language=C++]
+	while (servoPos < SERVO_LEFT) {
+	sonicServo.write(servoPos); // Set servo position
+	timer = millis(); // current time in ms
+	while (millis() - timer <  SERVO_STEP_DELAY) {
+	nh.spinOnce(); // handle callbacks
+	}
+	ping_time_uS = sonar.ping(); // Get echo time
+	publishSensorMessages(servoPos, ping_time_uS);
+	servoPos += SERVO_STEP_SZ;
+	}
+	\end{lstlisting}
+\end{mdframed}
+
+This code fragment is run inside the sketch's main loop, with a similar while-loop running right after, decrementing the servo position back to SERVO\_RIGHT.
+
+millis() is an Arduino built-in function which uses a hardware timer to count how many milliseconds have passed since the board was turned on. The callback handling that occurs while waiting reads the incoming serial buffer for any data, and if motor commands are found, an appropriate callback function is executed. publishSensorMessages() sends over serial the ping echo time, the servo's current angle, and the tick counts of both encoders. Section \ref{sectionRosSerial} will further describe how this data is passed between laptop and Arduino.
 
 \subsection{Quadrature Encoders} \label{sectionQuadEncoders}
 An important function of the Arduino sketch is to track the movement of the motors. Our system may command the motor driver to move the rover's wheels with a certain fraction of the maximum available power, but it is difficult to predict with precision the resulting angular velocity. For one thing, the RPM of DC motors is proportional to the supplied voltage. But the voltage supplied to the motors through the motor driver is coming from an external li-po battery pack, which generates variable voltage. It starts at 8.4V and drops to a minimum of 6.0V before the motor driver shuts off. Thus even if the same servo control pulse is continuously sent to the motor driver, the motors' angular velocity will decrease over time.
@@ -79,118 +107,46 @@ We achieve this by reacting to changes in voltage in only one channel per encode
 
 The sketch uses an implementation described in \cite{encoderBlog}, which creates a lookup table using the four binary digits representing the previous and current channel states. These digits form a four-bit binary number, which indexes into a sixteen element array. Each element of this array stores either 1, -1, or 0, where 1 represents a movement in the CW direction, -1 represents a movement in the CCW direction, and 0 represents an indeterminate transition. This lookup table is then used by the sketch when it reacts to a hardware interrupt caused by the channel A output of one of the encoders. When this interrupt occurs, the code reads the values of channels A and B from the corresponding digital pins, and combines them with the previous values to find the appropriate index in the lookup table. The value at that index is then added to a global counter variable, which keeps track of the net number of incremental movements from the motor's starting position. A net negative number indicates how far the motor has rotated in the CCW direction since it started, and a net positive number indicates how far the motor has rotated in the CW direction. \cite{encoderBlog}
 
-
-
-% TODO: BELOW
-TODO TODO TODO
-TODO TODO TODO
-text in this chapter below this line is not finished
-
-When one of the digital pins connected to Channel A change, the main loop of the sketch is interrupted, and the corresponding interrupt service routine (ISR) is executed. Until this ISR finishes, no other code is run, including other interrupt events, though they may be flagged for future execution. Therefore ISRs must be as fast as possible, to not cause any interrupt events to be dropped, and to ensure that the main loop continues running smoothly.
-
-PIND returns input readings from pins 0-7 as a byte.
-The below code uses bit shifting and masking to put
-the values of digital input pins 4 (output B) and 
-2 (output A) into the least significant bit and 
-second-least significant bit of the enc\_val 
-variable, respectively.
-
-\begin{mdframed}[backgroundcolor=light-gray, roundcorner=10pt,leftmargin=1, rightmargin=1, innerleftmargin=15, innertopmargin=15,innerbottommargin=15, outerlinewidth=1, linecolor=light-gray]
-\begin{lstlisting}[language=C++]
-volatile long encLeftCount = 0L;
-const int8_t encoder_lookup_table[] =
-    {0,0,0,-1,0,0,1,0,0,1,0,0,-1,0,0,0};
-void encoderLeft_isr() {
-static uint8_t enc_val = 0;
-enc_val = enc_val << 2; // Store the previous 2-bit code
-enc_val = enc_val | ( ((PIND & 0b100) >> 1) |
-    ((PIND & 0b10000) >> 4) );
-encLeftCount = encLeftCount + 
-    encoder_lookup_table[enc_val & 0b1111];
-}
-\end{lstlisting}
-\end{mdframed}
-
-\subsection{Timing}
-The serial communication between the Arduino and laptop is setup at a baud rate (equivalent to bit rate per second) of 115,200. The USB connection between the Arduino and laptop uses a cable supporting a data transfer rate of 480 Mbps (480 million bits per second). Ten bits are used per byte sent over the serial port (one start bit, 8 data bits, one stop bit), so 480 Mbps / 10 bits = 48 MBps. Let’s calculate the maximum data transfer rate I will need for all my sensors + motor commands (should be much less than 53 MBps).
-
-The Arduino Uno has 3 timers, timer0, timer1, timer2. Timer0 controls millis() and delay() in Arduino. Timer1 is used by the Servo library. Timer2 is used by the NewPing library.
-
-Each encoder generates 100 pulses per revolution. We will only be watching one of the square waves (output channel A), so that’s 200 edge transitions per revolution. The motors are 200 rpm, so at maximum speed the two motors with encoders attached would see less than 3.4 revolutions per second. So there will be at most 3.4 * 200 = 680 counts per second. So there will be at least 1 sec / 680 =~ 1.4 milli seconds between counts.
-9600 baud = 960 bytes / sec is more than enough for (14 byte per sensor update) * (30 updates per second (limit on ultrasonic sensor)) = 420 bytes per sec. At 960 bytes/sec, there is about a millisecond between byte transmissions. 
-
-Interrupt guards have been placed around code copying two long encoder counting variables (4 bytes) that are modified within ISRs. Each assignment to a local temp variable should translate to 4 machine instructions, so there will be 8 machine instructions between interrupt guards. The Arduino Uno uses a 16 MHz quartz crystal, so it can process 16 million instructions per second, which means it takes 1 sec / 16 million instructions = 6.25e-8 of a second per instruction. Thus to run the 8 instructions inside the guard takes 8 * 6.25e-8 = 5e-7 or half a micro second. 
-
-The worst case scenario would be for all possible interrupts to flag their events (serial RX, two hardware pins for quadrature encoders, plus Arduino background interrupts like the one for millis) right after interrupt handling is disabled. In this case, as long as interrupts are enabled and handled before another interrupt event occurs, no events will be lost. External interrupt calling has an overhead of 5.125 microseconds (5.125e-6), and each ISR should not take many microseconds \cite{gammonInterrupts}. Thus the interrupt guards should not cause a problem for either the 1400 micro seconds of time until the next possible quadrature encoder pin change or for the 1000 micro seconds until the next incoming serial byte. After exiting the interrupt guard, all interrupts are guaranteed to be handled before the next event arrives.
-
-\subsection{Ultrasonic Sensor}
-The PING))) ultrasonic distance sensor works by emitting a short burst of 40 kHz sound waves and timing the delay before an echo response. The Arduino triggers a ping by generating a brief 5 \(\mu\)s pulse on the sensor's bi-directional signal pin. The sensor then generates a HIGH output pulse, which continues until either the echo is received or the maximum amount of time, 18.5 ms, has passed. This time may then be multiplied by the speed of sound in air to calculate an estimated distance of the first object in front of the sensor. \cite{pingDocumentation}
-
-The sketch uses the NewPing library to handle this protocol \cite{newPing}. This library provides a convenient method, ping() which returns the echo time in \(\mu\)s. The sketch reports this time rather than a distance, since the speed of sound in air depends on the current air temperature. The appropriate conversion is made by the repeater node on the laptop, see section \ref{RepeaterNode}.
-
-\subsection{Servo}
-The ultrasonic sensor can only detect objects which are roughly straight in front of it. Thus for the rover to have a greater view of its surroundings, the sensor needs to be panned back and forth, to "look" straight ahead, left, and right. This is what the standard servo it is attached to allows. The sketch makes use of the standard Servo library to control the servo with PPM signals. An angular degree from 0 to 180 is written to a Servo object, and the servo library handles generating the output signal for the digital pin corresponding to that object.
-
-The sketch sweeps the servo back and forth one degree at a time, and at each step a range reading (in \(\mu\)s) from the PING))) sensor is taken. This reading, along with the servo's position in degrees, and the current motor encoder values, are then transmitted over serial.
-
-This is shown in the following code for an arbitrary step size:
-\begin{mdframed}[backgroundcolor=light-gray, roundcorner=10pt,leftmargin=1, rightmargin=1, innerleftmargin=15, innertopmargin=15,innerbottommargin=15, outerlinewidth=1, linecolor=light-gray]
-\begin{lstlisting}[language=C++]
-void setup() {
-sonicServo.attach(sonicServoPin);
-sonicServo.write(SERVO_RIGHT);
-}
-void loop() {
-servoPos = SERVO_RIGHT; // initial servo position
-while (servoPos < SERVO_LEFT) {
-sonicServo.write(servoPos);
-delay(SERVO_STEP_DELAY); 
-ping_time_uS = sonar.ping();
-pushSensorUpdate(servoPos, ping_time_uS);
-servoPos = min(servoPos + SERVO_STEP_SZ, SERVO_LEFT);
-}
-while (servoPos > SERVO_RIGHT) {
-sonicServo.write(servoPos);
-delay(SERVO_STEP_DELAY); 
-ping_time_uS = sonar.ping(); 
-pushSensorUpdate(servoPos, ping_time_uS);
-servoPos = max(servoPos - SERVO_STEP_SZ, SERVO_RIGHT);
-}
-}
-\end{lstlisting}
-\end{mdframed}
-
-
-\subsection{Communication Protocol}
-Serial communication over usb
-Hexadecimal ASCII - why?
-sends ping time, servo position, and both encoders tick counts at each servo position when it stops to take a range reading. This occurs at roughly 20 Hz.
-
-receives instructions, sets channel 1 and 2 accordingly
-
-
-* Reading from multi-byte variables which are accessed within
-* and without an ISR risks data corruption, so interrupt guards
-* must be used around a read to make it atomic.
-
-// worst case scenario, two encoder interrupt flags and serial RX flag are set right after noInterrupts();
-
-long is 4 bytes, so assignment translates to 4 machine instructions.
-
-// turn all interrupts back on, run next statement, then handle any that were flagged in-between guards
+The implementation described above is shown in the following C code of the ISR for the left encoder. \cite{encoderBlog}
 \begin{mdframed}[backgroundcolor=light-gray, roundcorner=10pt,leftmargin=1, rightmargin=1, innerleftmargin=15, innertopmargin=15,innerbottommargin=15, outerlinewidth=1, linecolor=light-gray]
 	\begin{lstlisting}[language=C++]
-noInterrupts(); // turn off all interrupts
-encLeftCount_temp = encLeftCount;
-encRightCount_temp = encRightCount;
-interrupts(); // turn all interrupts back on
+	volatile long encLeftCount = 0L;
+	const int8_t encoder_lookup_table[] =
+	{0,0,0,-1,0,0,1,0,0,1,0,0,-1,0,0,0};
+	void encoderLeft_isr() {
+	static uint8_t encLeft_val = 0;
+	encLeft_val = encLeft_val << 2;
+	encLeft_val = encLeft_val |
+	  ( ((PIND & 0b100) >> 1) | 
+	  ((PIND & 0b10000) >> 4) );
+	encLeftCount = encLeftCount +
+	  encoder_lookup_table[encLeft_val & 0b1111];
+	}
 	\end{lstlisting}
 \end{mdframed}
 
-Send sensor data to processing unit over serial port, with descriptive start bytes.
-None of the start bytes should be in the range '0' - '9' or 'a' - 'f', since those 
-chars are used by the hexadecimal ASCII encoding.
-L == Left motor's quadrature encoder's position value
-R == Right motor's quadrature encoder's position value
-S == Angular degree of servo
-P == Ultrasonic ping time (in micro seconds) measured at the given servo angle
+When the digital pin connected to the left encoder's Channel A output changes, the main loop of the sketch is interrupted, and this ISR is executed. Until this ISR finishes, no other code is run, including other ISRs, though they may be flagged for future execution. Therefore ISRs must be as fast as possible, to not cause any interrupt events to be dropped, and to ensure that the main loop continues running smoothly.
+
+To this end, this ISR makes use of constants and low-level C and avr microcontroller commands to ensure a speedy execution, at the price of readability. PIND is an avr command which returns input readings from digital pins 0-7 encoded into a byte. Bit shifting and masking are then used to extract and store the values of pins 2 (channel A) and 4 (channel B) into the two least significant bits of the encLeft\_val variable. This variable is static, and so retains its value between ISR executions. The count is then incremented according to the lookup table.
+
+When the sketch's main loop publishes sensor readings, it needs to publish the current encoder tick count for the right and left encoders. However, reading from multi-byte variables which are accessed within and without an ISR risks data corruption in the event that the ISR interrupts the main thread in-between readings of bytes. Since the encoder tick count variables are four bytes long, interrupt guards must be used around a read to make it atomic. These guards temporarily stop the custom ISR from executing while the global variables are copied over to local ones. This is shown for the left encoder count in the following snippet from the sketch:
+\begin{mdframed}[backgroundcolor=light-gray, roundcorner=10pt,leftmargin=1, rightmargin=1, innerleftmargin=15, innertopmargin=15,innerbottommargin=15, outerlinewidth=1, linecolor=light-gray]
+	\begin{lstlisting}[language=C++]
+	detachInterrupt(digitalPinToInterrupt(encLeftAPin));
+	encMsg.leftTicks = encLeftCount;
+	attachInterrupt(digitalPinToInterrupt(encLeftAPin),
+	  encoderLeft_isr, CHANGE);
+	t = 0;
+	\end{lstlisting}
+\end{mdframed}
+
+Similar guards are used for the right encoder count variable. 
+
+Because we are turning interrupts off briefly, there is the risk that we could miss an interrupt event on one of the channel A pins. Missing an edge pulse from one of the encoders would not only lose that tick, but would also throw off the next value we index into the lookup table. Luckily, the Arduino has a single-bit interrupt event flag for every interrupt event. Therefore in the worst case scenario, an encoder interrupt event occurs just after the ISR handler is detached, and that event is flagged. As long as the ISR is reattached and handles that flag before a second interrupt event occurs, there won't be a problem. After reattaching the ISR, the next program instruction is guaranteed to be executed before handling any flagged events. To ensure speedy handling of a flagged event, a meaningless assignment of zero is made to the local variable t.
+
+Let's calculate how often each interrupt event occurs. Each encoder generates 100 pulses per revolution. We will only be watching one of the square waves (output channel A), so that's 200 edge transitions per revolution. The motors are rated for 200 rpm, so at maximum speed the two encoders would revolve less than 3.4 times per second. So there will be at most \[3.4\ rev/sec * 200\ events/rev = 680\ events/sec\]
+Meaning we are guaranteed to have at least \(1 / 680 \approx 1.4\ ms\) between encoder interrupt events.
+
+So the interrupt guards need to take significantly less than \(1.4\ ms\) in order to allow a flagged interrupt event to be handled before the next event occurs. Each global encoder count variable is four bytes, so assignment compiles to four machine instructions. The assignment of zero to the one-byte variable t takes one machine instruction. The helper macro digitalPinToInterrupt() is a preprocessor \#define, and so takes zero machine instructions. Therefore there are five total machine instructions executed before the ISR is executed. The Arduino Uno uses a 16 MHz quartz timing crystal, so executing one instruction takes \[1 / (16000000\ Hz) = 0.000000625\ seconds = 62.5\ nanoseconds\]
+
+Thus to run the five instructions takes \(5 * 62.5\ ns = 0.3125\ \mu s\). Then the flagged event must be handled. External interrupt calling has an overhead of 5.125 \(\mu s\), to enter and leave the function \cite{gammonInterrupts}. Thus as long as the ISR executes in less than \(1.4\ ms - 0.0003125\ ms - 0.005125\ ms = 1.3945625\ ms\), the sketch will never miss an encoder event. Testing of the ISR indicates that this is an order of magnitude more time than needed.
