--- a/title.tex
+++ b/title.tex
@@ -45,7 +45,7 @@
 % however the specifications can change.  We recommend that you verify the
 % layout of your title page with your thesis advisor and/or the NCF 
 % Library before printing your final copy.
-\title{Cheap Outdoors Autonomous Navigation with ROS}
+\title{State Estimation of an Unmanned Ground Vehicle Using Inexpensive Sensors}
 
 \author{Noah Johnson}
 
